<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_registrar_ad">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:id="@+id/layoutForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/titleCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/pf_seleccione_categoria"
                        android:textColor="@color/cns_azul"
                        app:fontFamily="@font/quicksand_bold" />

                    <Button
                        android:id="@+id/btnSelectCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleCat"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_borde_celeste"
                        android:gravity="center"
                        android:text="@string/selecciona_categoria"
                        android:textColor="@color/cns_celeste"
                        app:fontFamily="@font/quicksand_bold" />

                    <Button
                        android:id="@+id/btnSelectSubCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btnSelectCategory"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_borde_celeste"
                        android:gravity="center"
                        android:text="@string/selecciona_subcategoria"
                        android:textColor="@color/cns_celeste"
                        android:visibility="gone"
                        app:fontFamily="@font/quicksand_bold" />

                    <TextView
                        android:id="@+id/lblTitleAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btnSelectSubCategory"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/ads_title"
                        android:textColor="@color/cns_azul"
                        app:fontFamily="@font/quicksand_bold" />

                    <EditText
                        android:id="@+id/txtTitleAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lblTitleAd"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp" />

                    <TextView
                        android:id="@+id/lblDescAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtTitleAd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/ads_desc"
                        android:textColor="@color/cns_azul"
                        app:fontFamily="@font/quicksand_bold" />

                    <EditText
                        android:id="@+id/txtDescAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lblDescAd"
                        android:layout_marginBottom="5dp"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLines="3"
                        android:minLines="1"
                        android:scrollHorizontally="false" />

                    <TextView
                        android:id="@+id/lblPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtDescAd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/ads_price"
                        android:textColor="@color/cns_azul"
                        app:fontFamily="@font/quicksand_bold" />

                    <EditText
                        android:id="@+id/txtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lblPrice"
                        android:layout_marginBottom="10dp"
                        android:imeOptions="actionNext"
                        android:paddingBottom="10dp"
                        android:scrollHorizontally="false" />

                    <HorizontalScrollView
                        android:id="@+id/horizontalView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPrice"
                        android:layout_gravity="left"
                        android:fillViewport="true"
                        android:measureAllChildren="false"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/imageGallery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:orientation="horizontal"
                            android:padding="5dp">

                        </LinearLayout>

                    </HorizontalScrollView>

                    <Button
                        android:id="@+id/btnPublicarAnuncio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/horizontalView"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_btn_celeste"
                        android:gravity="center"
                        android:text="@string/reconfirm"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layoutCompletarPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/titleReglas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/regla_completar_perfil"
                        android:textAllCaps="true"
                        android:textColor="@color/cns_celeste"
                        app:fontFamily="@font/quicksand_bold" />

                    <TextView
                        android:id="@+id/titleIrPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titleReglas"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/completar_perfil"
                        android:textColor="@color/cns_azul"
                        app:fontFamily="@font/quicksand_bold" />

                    <Button
                        android:id="@+id/btnIrPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleIrPerfil"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_borde_celeste"
                        android:gravity="center"
                        android:text="@string/completar_perfil_ahora"
                        android:textColor="@color/cns_celeste"
                        app:fontFamily="@font/quicksand_bold" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>