<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/round_edge"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingRight="20dp"
    android:paddingEnd="20dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgGeolito"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ico_geotip4"  />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/cns_celeste"
        app:fontFamily="@font/quicksand_bold"
        android:text="@string/mensaje_geotips"
        android:textSize="22sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/cns_gris"
        app:fontFamily="@font/quicksand_bold_italic"
        android:text="@string/geotipo_aprovecha"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_listo"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_celeste"
        android:text="@string/listo"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:textColor="@android:color/white"
        app:fontFamily="@font/quicksand_bold" />

</LinearLayout>