<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:background="@color/celeste"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"  />

    <ImageView
        android:id="@+id/myLogo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contentDescription"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:scaleType="fitXY"
        android:src="@mipmap/logo_index" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/myLogo"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_borde_celeste"
            app:fontFamily="@font/quicksand_bold"
            android:text="@string/registrar_vehiculo"
            android:textColor="@color/cns_celeste"/>



        <TextView
            android:id="@+id/linkTYC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:text="@string/tyc"/>

    </LinearLayout>

</RelativeLayout>


